# TerminalUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain-rpi.cmake  vagrantfile
example/: demo.cpp  lubadh_demo.cpp  lubadh_interface.cpp
include/: instruobutton.h  interface.h  loop_display.h  lubadh_interface.h  parameter.h  toggle.h
src/: dummy.cpp  goldslider.cpp  instruobutton.cpp  interface.cpp  interface.h  loop_display.cpp  lubadh_interface.cpp  parameter.cpp  parameter.h  toggle.cpp
test/: interface_test.cpp  parameter_test.cpp  ui_test.cpp
